amend route for api
